--- a/app/views/select.html
+++ b/app/views/select.html
@@ -1,59 +1,24 @@
-<div class = 'container'>
-
-<span class = ' pull-left'>
-<span class = 'content-table'>
-l
-</span>
-</span>
-
-<span class = ' pull-right'>
-<span class = 'content-table'>
-<div class="btn btn-primary btn-draggable" data-drag="true" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{animate:true}" >list1.title</div>
-</span>
-</span>
+<div ng-controller="oneCtrl">
+  <div class='contentWrapper ng-cloak'>
+	<div class='content'>
+	  <div class="row-fluid">
+		<ul class="thumbnails">
+		  <li class="span3" style='margin-left:10px;'>
+			<div class="thumbnail" data-drop="true" ng-model='AvailableCities' data-jqyoui-options="optionsAvailableCities" jqyoui-droppable="{multiple:true}">
+			  <div class="caption">
+				<div class="btn btn-info btn-draggable" ng-repeat="item in AvailableCities" ng-show="item.Name" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="AvailableCities" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.Name}}</div>
+			  </div>
+			</div>
+		  </li>
+		  <li class="span3" style='margin-left:10px;'>
+			<div class="thumbnail" data-drop="true" ng-model='selectedCities' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=selectedCities])'}"  jqyoui-droppable="{multiple:true}">
+			  <div class="caption">
+				<div class="btn btn-info btn-draggable" ng-repeat="item in selectedCities" ng-show="item.Name" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="selectedCities" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.Name}}</div>
+			  </div>
+			</div>
+		  </li>
+		</ul>
+	  </div>
+	</div>
+  </div>
 </div>
-    <div ng-controller="oneCtrl">
-      <div class='contentWrapper ng-cloak'>
-        <div class='content'>
-          <div class="row-fluid">
-            <ul class="thumbnails">
-              <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list1' data-jqyoui-options="optionsList1" jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list1" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list1" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li>
-              <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list2' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list2])'}"  jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list2" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list2" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li>
-              <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list3' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list3])'}"  jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list3" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list3" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li>
-              <li class="span3" style='margin-left:10px;'>
-                <div class="thumbnail" data-drop="true" ng-model='list4' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list4])'}"  jqyoui-droppable="{multiple:true}">
-                  <div class="caption">
-                    <div class="btn btn-info btn-draggable" ng-repeat="item in list4" ng-show="item.title" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list4" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.title}}</div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="navbar-inner">
-        <div class="container form-inline" style="text-align: center;">
-          <div class="btn btn-droppable" ng-repeat="item in list5" data-drop="true" ng-model='list5' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=list5])'}"  jqyoui-droppable="{index: {{$index}}}">
-            <div class="btn btn-info btn-draggable" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="list5" jqyoui-draggable="{index: {{$index}},placeholder:true,animate:true}" ng-hide="!item.title">{{item.title}}</div>
-          </div>
-        </div>
-      </div>
-    </div>
