--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,3 @@
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing,
@@ -11,45 +5,29 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
-.cont{
-min-height: 100%;
-}
-.footer
-{
-position:relative;
-bottom:0px;
-}
+
 .header{
-background: #3D663D url(../asdsa/images/cropped-header2.jpg) no-repeat;
+background: #3D663D;
 position: relative;
 height: 50px;
 font-size: 200%;
 }
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+
+.cont{
+background-color:#bbFFbb;
 }
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+  padding-top: 7px;
+  position:fixed;
+  height:30px;
+  background-color: #3D663D;
+  bottom:0px;
+  left:0px;
+  right:0px;
 }
 
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 930px;
-  }
-}
 .container-narrow > hr {
   margin: 30px 0;
 }
@@ -87,10 +65,6 @@ font-size: 200%;
   .footer {
     padding-left: 0;
     padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
   }
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
