--- a/app/views/select.html
+++ b/app/views/select.html
@@ -3,14 +3,14 @@
 	<div class='content'>
 	  <div class="row-fluid">
 		<ul class="thumbnails">
-		  <li class="span3" style='margin-left:10px;'>
+		  <li class="content-table" style='margin-left:10px;'>
 			<div class="thumbnail" data-drop="true" ng-model='AvailableCities' data-jqyoui-options="optionsAvailableCities" jqyoui-droppable="{multiple:true}">
 			  <div class="caption">
 				<div class="btn btn-info btn-draggable" ng-repeat="item in AvailableCities" ng-show="item.Name" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="AvailableCities" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.Name}}</div>
 			  </div>
 			</div>
 		  </li>
-		  <li class="span3" style='margin-left:10px;'>
+		  <li class="content-table" style='margin-left:10px;'>
 			<div class="thumbnail" data-drop="true" ng-model='selectedCities' data-jqyoui-options="{accept:'.btn-draggable:not([ng-model=selectedCities])'}"  jqyoui-droppable="{multiple:true}">
 			  <div class="caption">
 				<div class="btn btn-info btn-draggable" ng-repeat="item in selectedCities" ng-show="item.Name" data-drag="{{item.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="selectedCities" jqyoui-draggable="{index: {{$index}},animate:true}">{{item.Name}}</div>
@@ -30,7 +30,8 @@
 </div>
 <!-- Popup Div Ends Here -->
 </div>
-<img id="add" src="images/GreenPlus.ico" ng-Click ="div_show()" />
+<img id="add" style="height:auto; width:auto; max-width:30px; max-height:30px;"
+ src="images/GreenPlus.ico" ng-Click ="div_show()" alt="Add City" />
 	  </div>
 	</div>
   </div>
