--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,14 @@
-<p>This is the about view.</p>
+<div class="row marketing">
+  <h4>HTML5 with Angular</h4>
+  <p>
+    Technology used for Building this web app.
+  </p>
+
+  <h4>Google API</h4>
+  <p>
+    Google provides the API that makes this tick.
+  </p>
+
+  <h4>TSP ALgorithm</h4>
+  <p>Custom Algorithm based on.....</p>
+</div>
