--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -75,7 +75,7 @@ text-decoration:none;
 width:100%;
 text-align:center;
 display:block;
-background-color:#FFBC00;
+background-color:#bbFFbb;
 color:#fff;
 border:1px solid #FFCB00;
 padding:10px 0;
