--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,16 +1,21 @@
-<div class="row" style="width: 60%; margin: 0px auto;">
+<div class="container">
 
-  <h4>HTML5 with Angular</h4>
-  <p>
-    Technology used for Building this web app.
-  </p>
+<div class="row">
 
-  <h4>Google API</h4>
-  <p>
-    Google provides the API that makes this tick.
-  </p>
+<div class="span4"><p>1</p></div>
 
-  <h4>TSP ALgorithm</h4>
-  <p>Custom Algorithm based on.....</p>
+<div class="span4"><p>2</p></div>
+
+<div class="span4"><p>3</p></div>
+
 </div>
+<div class="row">
 
+<div class="span4"><p>1a</p></div>
+
+<div class="span4"><p>2a</p></div>
+
+<div class="span4"><p>3a</p></div>
+
+</div>
+</div>
