--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,21 +1,4 @@
-<div class="container">
-
-<div class="row">
-
-<div class="span4"><p>1</p></div>
-
-<div class="span4"><p>2</p></div>
-
-<div class="span4"><p>3</p></div>
-
-</div>
-<div class="row">
-
-<div class="span4"><p>1a</p></div>
-
-<div class="span4"><p>2a</p></div>
-
-<div class="span4"><p>3a</p></div>
-
-</div>
+<div class="jumbotron">
+    <div id="outputDiv"></div>
+    <div id="map-canvas"></div>
 </div>
