--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,10 @@
-<div class="jumbotron">
-  <h2>'Welcome to the Travelling Salesman problem!'
-  <p class="lead">
-    <img src="images/tsp1_s.png" alt="Salesman"><br>
-    by Karthik Swarna
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/select">Start!<span class="glyphicon glyphicon-ok"></span></a></p>
-  </h2>
+<div class ="BlankBar"></div>
+<div align="center" >
+    <div class="resultron" >
+        <div class="Title">
+        'Welcome to the Travelling Salesman problem!'
+        <p ><img src="images/tsp1_s.png" alt="Salesman"><br>by Karthik Swarna</p>
+        <p><a class="btn btn-lg btn-success" ng-href="#/select">Start!<span class="glyphicon glyphicon-ok"></span></a></p>
+        </div>
+    </div>
 </div>
