--- a/app/views/result.html
+++ b/app/views/result.html
@@ -1,4 +1,10 @@
-<div class="jumbotron">
-    <div id="outputDiv"></div>
-    <div id="map-canvas"></div>
+<div class ="BlankBar"></div>
+<div align="center" >
+    <div class="resultron"  ng-controller="resultCtrl" >
+        <div style="padding-bottom: 20px">
+            The following list displays the best route calculated using the <a href="http://en.wikipedia.org/wiki/Nearest_neighbour_algorithm">"Nearest Neighbour algorithm"</a> for Travelling Salesman Problem for the given cities.
+        </div>
+        <div id="outputDiv"></div>
+        <div id="map-canvas"></div>
+    </div>
 </div>
