--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,16 +1,19 @@
-<div class="row" style="width: 60%; margin: 0px auto;">
+<div class ="BlankBar"></div>
+<div align="center" >
+    <div class="resultron"  ng-controller="resultCtrl" >
+        <h4>HTML5 with Angular</h4>
+        <p>
+            Technology used for Building this web app.
+        </p>
 
-  <h4>HTML5 with Angular</h4>
-  <p>
-    Technology used for Building this web app.
-  </p>
+        <h4>Google API</h4>
+        <p>
+            Google provides the API that makes this tick.
+        </p>
 
-  <h4>Google API</h4>
-  <p>
-    Google provides the API that makes this tick.
-  </p>
-
-  <h4>TSP ALgorithm</h4>
-  <p>Custom Algorithm based on.....</p>
+        <h4>TSP ALgorithm</h4>
+        <p>Custom Algorithm based on.....</p>
+    </div>
 </div>
+
 
